# HBAdissertation

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
MATLAB/: simulate_othello.m  tester.m
MATLAB/+agents/: H1_maximum_disk.m  H2_maximum_value.m  HBA_agent.m  HBA_agent_workspace.m  agent_template.m  likelihood_sum.m  myTemplate.m
MATLAB/+othello/: getNewboard.m  getScore.m  getValidMoves.m  isOnBoard.m  isValidMove.m  makeMove.m  plotBoard.m  transition.m
MATLAB/+tools/: counterProfiles.m  randomAction.m
PYTHON/: run_game.py  util.py
PYTHON/agents/: hba_agent.py  human_agent.py  max_disk_agent.py  max_disk_purturb.py  max_value_agent.py  mobility_agent.py  random_agent.py  simulated_agent1.py
PYTHON/game/: board.py  reversi.py  workspace.py
src/: constants.py  main.py  util.py
src/agents/: agent.py  hba_agent.py  human_agent.py  max_disk_agent.py  max_disk_purturb.py  max_value_agent.py  mc_node.py  mobility_agent.py  random_agent.py  simulated_agent1.py
src/game/: board.py  othello.py  workspace.py
